Doc/force-app/main/default/objects/Contact/fields/Apex_Context__c.field-meta.xml
<CustomField>
    <fullName>Apex_Context__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate that the contact is being processed in an apex context and that some of the validation rules can be bypassed</description>
    <label>Apex Context</label>
    <type>Checkbox</type>
</CustomField>