Doc/force-app/main/default/objects/Contact/fields/Assistant_s_E_mail__c.field-meta.xml
<CustomField>
    <fullName>Assistant_s_E_mail__c</fullName>
    <label>Assistant&apos;s E-mail</label>
    <type>Email</type>
</CustomField>