Doc/force-app/main/default/objects/Contact/fields/Bill_To_Contact_Interim_Field__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Contact_Interim_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill To Contact - Interim Field</label>
    <type>Checkbox</type>
</CustomField>