Doc/force-app/main/default/objects/Contact/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Contact</label>
    <type>Checkbox</type>
</CustomField>