Doc/force-app/main/default/objects/Contact/fields/Box_Username__c.field-meta.xml
<CustomField>
    <fullName>Box_Username__c</fullName>
    <label>Box Username</label>
    <length>128</length>
    <type>Text</type>
</CustomField>