Doc/force-app/main/default/objects/Contact/fields/CASL_compliance__c.field-meta.xml
<CustomField>
    <fullName>CASL_compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CASL compliance</label>
    <type>Checkbox</type>
</CustomField>