Doc/force-app/main/default/objects/Contact/fields/CDA_Owner__c.field-meta.xml
<CustomField>
    <fullName>CDA_Owner__c</fullName>
    <formula>IF(
OR(
CONTAINS(TEXT(Account.Industry), &apos;Accounting&apos;),
CONTAINS(TEXT(Account.Industry), &apos;Consulting&apos;)
),
&apos;Natashia Gavarrete&apos;,

IF(
AND(
ISPICKVAL(Account.Industry ,&apos;Legal&apos;),
OR(
Account.Owner.UserRoleId=&quot;00E50000000sQmp&quot;, /*EMEA Sales*/
Account.Owner.UserRoleId=&quot;00E500000010Q8v&quot; /*EMEA Sales Reps*/
)
),
&apos;Paul Talaga&apos;,

IF(
AND(
ISPICKVAL(Account.Industry ,&apos;Legal&apos;),
OR(
Account.Owner.UserRoleId=&quot;00E500000011cAL&quot;, /*NA Large Law / APAC Sales*/
Account.Owner.UserRoleId=&quot;00E500000011cAQ&quot; /*NA Large Law / APAC Sales Reps*/
),
CONTAINS(Department, &apos;Marketing&apos;)
),
&apos;Paul Talaga&apos;,

IF(
AND(
ISPICKVAL(Account.Industry ,&apos;Legal&apos;),
OR(
Account.Owner.UserRoleId=&quot;00E500000011cAL&quot;, /*NA Large Law / APAC Sales*/
Account.Owner.UserRoleId=&quot;00E500000011cAQ&quot; /*NA Large Law / APAC Sales Reps*/
),
CONTAINS(Department, &apos;Risk&apos;)
),
&apos;Holly Stirk&apos;,

IF(
AND(
ISPICKVAL(Account.Industry ,&apos;Legal&apos;),
OR(
Account.Owner.UserRoleId=&quot;00E500000011cAL&quot;, /*NA Large Law / APAC Sales*/
Account.Owner.UserRoleId=&quot;00E500000011cAQ&quot;, /*NA Large Law / APAC Sales Reps*/
Account.Owner.UserRoleId=&quot;00E500000011cAV&quot;, /*NA Mid-size Law Sales*/
Account.Owner.UserRoleId=&quot;00E500000011cAa&quot; /*NA Mid-size Law Sales Reps*/
),
CONTAINS(Department, &apos;Operations&apos;)
),
&apos;Rebecca Frazier&apos;,
IF(
AND(
ISPICKVAL(Account.Industry ,&apos;Legal&apos;),
OR(
Account.Owner.UserRoleId=&quot;00E500000011cAL&quot;, /*NA Large Law / APAC Sales*/
Account.Owner.UserRoleId=&quot;00E500000011cAQ&quot;, /*NA Large Law / APAC Sales Reps*/
Account.Owner.UserRoleId=&quot;00E500000011cAV&quot;, /*NA Mid-size Law Sales*/
Account.Owner.UserRoleId=&quot;00E500000011cAa&quot; /*NA Mid-size Law Sales Reps*/
),
CONTAINS(Department, &apos;IT&apos;)
),
&apos;Rebecca Frazier&apos;,
IF(
AND(
ISPICKVAL(Account.Industry ,&apos;Legal&apos;),
OR(
Account.Owner.UserRoleId=&quot;00E500000011cAL&quot;, /*NA Large Law / APAC Sales*/
Account.Owner.UserRoleId=&quot;00E500000011cAQ&quot; /*NA Large Law / APAC Sales Reps*/
),
OR(
CONTAINS(Department, &apos;Content&apos;),
CONTAINS(Department, &apos;IT&apos;),
CONTAINS(Department, &apos;Leaders&apos;)
)
),
&apos;Paul Talaga&apos;,
IF(
AND(
ISPICKVAL(Account.Industry ,&apos;Legal&apos;),
OR(
Account.Owner.UserRoleId=&quot;00E500000011cAV&quot;, /*NA Mid-size Law Sales*/
Account.Owner.UserRoleId=&quot;00E500000011cAa&quot; /*NA Mid-size Law Sales Reps*/
),
OR(
CONTAINS(Department, &apos;Risk&apos;),
CONTAINS(Department, &apos;Marketing&apos;)
)
),
&apos;Hunter Tate&apos;,
&apos;Jeff Macomber&apos;
))))))))</formula>
    <label>CDA Owner</label>
    <type>Text</type>
</CustomField>