Doc/force-app/main/default/objects/Contact/fields/Clarizen_Username__c.field-meta.xml
<CustomField>
    <fullName>Clarizen_Username__c</fullName>
    <label>Clarizen Username</label>
    <length>128</length>
    <type>Text</type>
</CustomField>