Doc/force-app/main/default/objects/Contact/fields/Community_Action__c.field-meta.xml
<CustomField>
    <fullName>Community_Action__c</fullName>
    <label>Community Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PleaseCreate</fullName>
            </value>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>ManualCreationNeeded</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>AccountDeleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>