Doc/force-app/main/default/objects/Contact/fields/Confirmed_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed Opt Out</label>
    <type>Checkbox</type>
</CustomField>