Doc/force-app/main/default/objects/Contact/fields/Contact_Count__c.field-meta.xml
<CustomField>
    <fullName>Contact_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Should be set to 1 for all Contacts.</description>
    <label>Contact Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>