Doc/force-app/main/default/objects/Contact/fields/Contact_CSM_Account_Mgr__c.field-meta.xml
<CustomField>
    <fullName>Contact_CSM_Account_Mgr__c</fullName>
    <description>Ticket 26643:
Created for completing a dataload for the CSM team to check if the values in the corresponding fields are same.
This field does not have any other purpose and has visibility to only System Admins.</description>
    <formula>Account.CSM_Account_Mgr_Name__c</formula>
    <label>Contact CSM Account Mgr</label>
    <type>Text</type>
</CustomField>