Doc/force-app/main/default/objects/Contact/fields/Contact_Department__c.field-meta.xml
<CustomField>
    <fullName>Contact_Department__c</fullName>
    <description>To be used in search layout</description>
    <formula>TEXT(Department__c)</formula>
    <label>Department</label>
    <type>Text</type>
</CustomField>