Doc/force-app/main/default/objects/Contact/fields/Contact_info_last_updated_by__c.field-meta.xml
<CustomField>
    <fullName>Contact_info_last_updated_by__c</fullName>
    <description>Registers name of user who checks &apos;Information validated&apos; checkbox to trigger a workflow rule.</description>
    <inlineHelpText>Registers name of user who checks &apos;Information validated&apos; checkbox to trigger a workflow rule.</inlineHelpText>
    <label>Contact info last updated by</label>
    <length>63</length>
    <type>Text</type>
</CustomField>