Doc/force-app/main/default/objects/Contact/fields/Contact_Mis_match__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mis_match__c</fullName>
    <formula>IF( CSM_Account_Manager_Email__c =  Account.CRD__r.Email, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mis-match</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>