Doc/force-app/main/default/objects/Contact/fields/ContactRating__c.field-meta.xml
<CustomField>
    <fullName>ContactRating__c</fullName>
    <label>Contact Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Lawnet List Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>