Doc/force-app/main/default/objects/Contact/fields/CreateCC__c.field-meta.xml
<CustomField>
    <fullName>CreateCC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should we pull these credentials in to create a CC account?</description>
    <label>CreateCC</label>
    <type>Checkbox</type>
</CustomField>