Doc/force-app/main/default/objects/Contact/fields/CSM_Account_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>CSM_Account_Manager_Email__c</fullName>
    <label>CSM Account Manager Email</label>
    <type>Email</type>
</CustomField>