Doc/force-app/main/default/objects/Contact/fields/Customer_Community_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Community_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CC?</label>
    <type>Checkbox</type>
</CustomField>