Doc/force-app/main/default/objects/Contact/fields/Customer_Community_Role__c.field-meta.xml
<CustomField>
    <fullName>Customer_Community_Role__c</fullName>
    <inlineHelpText>Business = Access to the business Customer Community 
Technical = Access to the technical Customer Community</inlineHelpText>
    <label>Customer Community Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Integration - Business</fullName>
            </value>
            <value>
                <fullName>Integration - Technical</fullName>
            </value>
            <value>
                <fullName>Risk - Technical</fullName>
            </value>
            <value>
                <fullName>Revenue - Business</fullName>
            </value>
            <value>
                <fullName>Revenue - Technical</fullName>
            </value>
            <value>
                <fullName>Risk - Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>