Doc/force-app/main/default/objects/Contact/fields/Degrees_of_Separation__c.field-meta.xml
<CustomField>
    <fullName>Degrees_of_Separation__c</fullName>
    <label>Degrees of Separation</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>