Doc/force-app/main/default/objects/Contact/fields/Disqualified_by_Rep__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_by_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a sales rep determines this person has provided all useful information and is of no further help advancing this or future opportunities, the rep may disqualify them.</description>
    <label>Disqualified by Rep</label>
    <type>Checkbox</type>
</CustomField>