Doc/force-app/main/default/objects/Contact/fields/Experience_Certification_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Experience_Certification_Expiration__c</fullName>
    <label>Experience Certification Expiration</label>
    <type>Date</type>
</CustomField>