Doc/force-app/main/default/objects/Contact/fields/Firm_Leader__c.field-meta.xml
<CustomField>
    <fullName>Firm_Leader__c</fullName>
    <formula>IF(INCLUDES(Role_old__c, &quot;Firm Management&quot;),&quot;Leader&quot;, 
IF(INCLUDES(Role_old__c, &quot;IT Leader&quot;),&quot;Leader&quot;, 
IF(INCLUDES(Role_old__c, &quot;Risk Leader&quot;),&quot;Leader&quot;, 
IF(INCLUDES(Role_old__c, &quot;Integration Leader&quot;),&quot;Leader&quot;, 
IF(INCLUDES(Role_old__c, &quot;Finance Management&quot;),&quot;Leader&quot;,&quot;&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm Leader</label>
    <type>Text</type>
</CustomField>