Doc/force-app/main/default/objects/Contact/fields/GC__c.field-meta.xml
<CustomField>
    <fullName>GC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate whether this person is a GC equivalent.</description>
    <label>GC</label>
    <type>Checkbox</type>
</CustomField>