Doc/force-app/main/default/objects/Contact/fields/Gives_Consent_to_Advertise_Certification__c.field-meta.xml
<CustomField>
    <fullName>Gives_Consent_to_Advertise_Certification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gives Consent to Advertise Certification</label>
    <type>Checkbox</type>
</CustomField>