Doc/force-app/main/default/objects/Contact/fields/IB_Reference_Usage_Info__c.field-meta.xml
<CustomField>
    <fullName>IB_Reference_Usage_Info__c</fullName>
    <defaultValue>&quot;Indicate any special notes about the reference as well as when this reference was last used.&quot;</defaultValue>
    <description>To track the date and name of the person this contact was used as a reference for</description>
    <inlineHelpText>Indicate anything special to note about using this person as an IB reference.</inlineHelpText>
    <label>IB Reference Usage Info</label>
    <type>TextArea</type>
</CustomField>