Doc/force-app/main/default/objects/Contact/fields/ILTA_Role__c.field-meta.xml
<CustomField>
    <fullName>ILTA_Role__c</fullName>
    <label>ILTA Role</label>
    <length>40</length>
    <type>Text</type>
</CustomField>