Doc/force-app/main/default/objects/Contact/fields/Industry_Group_Membership__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group_Membership__c</fullName>
    <label>Industry Group Membership</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TVPI Lead</fullName>
            </value>
            <value>
                <fullName>P3 Lead</fullName>
            </value>
            <value>
                <fullName>SALI Lead</fullName>
            </value>
            <value>
                <fullName>LawVision Lead</fullName>
            </value>
            <value>
                <fullName>3 Geeks Blogger</fullName>
            </value>
            <value>
                <fullName>PIE OPFF RT Participant</fullName>
            </value>
            <value>
                <fullName>LVN</fullName>
            </value>
            <value>
                <fullName>CLOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>