Doc/force-app/main/default/objects/Contact/fields/Inferred_Email__c.field-meta.xml
<CustomField>
    <fullName>Inferred_Email__c</fullName>
    <description>Email inferred from automatic creation.  Bouncebacks removed.</description>
    <label>Inferred Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>