Doc/force-app/main/default/objects/Contact/fields/Influencer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Influencer_Segment__c</fullName>
    <label>Influencer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Law Firm</fullName>
            </value>
            <value>
                <fullName>Accounting Firm</fullName>
            </value>
            <value>
                <fullName>Other Industry Firm</fullName>
            </value>
            <value>
                <fullName>Consultant/TL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>