Doc/force-app/main/default/objects/Contact/fields/Information_validated__c.field-meta.xml
<CustomField>
    <fullName>Information_validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to trigger a workflow to update the last validated date and by whom</description>
    <inlineHelpText>Check to update date &amp; time information when it is last updated and by whom.</inlineHelpText>
    <label>Information validated</label>
    <type>Checkbox</type>
</CustomField>