Doc/force-app/main/default/objects/Contact/fields/IntApp_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>IntApp_Contact_Number__c</fullName>
    <description>This is a human-readable, case-insensitive unique identifier for Contact records.</description>
    <displayFormat>C{000000}</displayFormat>
    <label>Intapp Contact Number</label>
    <type>AutoNumber</type>
</CustomField>