Doc/force-app/main/default/objects/Contact/fields/Intapp_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Exposure__c</fullName>
    <label>Intapp Exposure</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attended Connect</fullName>
            </value>
            <value>
                <fullName>Intapp Customer</fullName>
            </value>
            <value>
                <fullName>Intapp Pricing Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>