Doc/force-app/main/default/objects/Contact/fields/Interaction_Value__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Value__c</fullName>
    <formula>IF(ISPICKVAL(Role__c, &quot;Met - Supports&quot;), 7, 
IF(ISPICKVAL(Role__c, &quot;Met - Denied&quot;), 6,
IF(ISPICKVAL(Role__c,&quot;Met&quot;), 5,
IF(ISPICKVAL(Role__c,&quot;Interaction - Email/Phone&quot;), 4,
IF(ISPICKVAL(Role__c,&quot;Unmet - Same Room&quot;), 3,
IF(ISPICKVAL(Role__c,&quot;Unmet&quot;), 2,
IF(ISPICKVAL(Role__c,&quot;Unknown&quot;), 1, 0)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interaction Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>