Doc/force-app/main/default/objects/Contact/fields/Last_assigned_Account__c.field-meta.xml
<CustomField>
    <fullName>Last_assigned_Account__c</fullName>
    <label>Last assigned Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>