Doc/force-app/main/default/objects/Contact/fields/Last_Confirmed_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Last_Confirmed_Opt_Out__c</fullName>
    <label>Last Confirmed Opt Out</label>
    <type>Date</type>
</CustomField>