Doc/force-app/main/default/objects/Contact/fields/lastCCPostDate__c.field-meta.xml
<CustomField>
    <fullName>lastCCPostDate__c</fullName>
    <description>Last CC Post Date by this Contact</description>
    <label>Last CC Post Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>