Doc/force-app/main/default/objects/Contact/fields/LawNet_ID__c.field-meta.xml
<CustomField>
    <fullName>LawNet_ID__c</fullName>
    <label>LawNet ID</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>