Doc/force-app/main/default/objects/Contact/fields/LawNet_SIG_Membership__c.field-meta.xml
<CustomField>
    <fullName>LawNet_SIG_Membership__c</fullName>
    <label>LawNet SIGs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dataflight</fullName>
            </value>
            <value>
                <fullName>Hummingbird</fullName>
            </value>
            <value>
                <fullName>Interface</fullName>
            </value>
            <value>
                <fullName>Interwoven</fullName>
            </value>
            <value>
                <fullName>Linux</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
            <value>
                <fullName>Novell</fullName>
            </value>
            <value>
                <fullName>Solution 6</fullName>
            </value>
            <value>
                <fullName>Summation</fullName>
            </value>
            <value>
                <fullName>Thomson Elite</fullName>
            </value>
            <value>
                <fullName>West Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>