Doc/force-app/main/default/objects/Contact/fields/Legal_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Last_Name__c</fullName>
    <description>SC-000042</description>
    <label>Legal Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>