Doc/force-app/main/default/objects/Contact/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <description>This is to store a contact&apos;s actual legal name - so that the preferred name can be stored in the regular native first name field.</description>
    <label>Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>