Doc/force-app/main/default/objects/Contact/fields/Manager_Approver_Override__c.field-meta.xml
<CustomField>
    <fullName>Manager_Approver_Override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Override the Manager Approver.</description>
    <label>Manager Approver Override</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>